syntax = "proto3";

package pb;

import "api.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


option go_package = "github.com/MamangRust/monolith-ecommerce-shared/pb";


message FindByIdShippingRequest {
    int32 id = 1;
}


message FindAllShippingRequest {
    int32 page = 1;
    int32 page_size = 2;
    string search = 3;
}

message FindAllShippingOrderRequest{
    int32 order_id = 1;
    int32 page = 2;
    int32 page_size = 3;
    string search = 4;
}

message CreateShippingAddressRequest {
    string alamat = 2;
    string provinsi = 3;
    string kota = 4;
    string courier = 5;
    string shipping_method = 6;
    int32 shipping_cost = 7;
    string negara = 8;
}

message UpdateShippingAddressRequest {
    int32 shipping_id = 1;
    string alamat = 3;
    string provinsi = 4;
    string kota = 5;
    string courier = 6;
    string shipping_method = 7;
    int32 shipping_cost = 8;
    string negara = 9;
}


message ShippingResponse {
    int32 id = 1;
    int32 order_id = 2;
    string alamat = 3;
    string provinsi = 4;
    string negara = 5;
    string kota = 6;
    string shippingMethod = 7;
    int32 shippingCost = 8;
    string created_at = 9;
    string updated_at = 10;
}


message ShippingResponseDeleteAt {
    int32 id = 1;
    int32 order_id = 2;
    string alamat = 3;
    string provinsi = 4;
    string negara = 5;
    string kota = 6;
    string shippingMethod = 7;
    int32 shippingCost = 8;
    string created_at = 9;
    string updated_at = 10;
    google.protobuf.StringValue deleted_at = 11;
}


message ApiResponseShipping {
    string status = 1;
    string message = 2;
    ShippingResponse data = 3;
}


message ApiResponseShippingDeleteAt {
    string status = 1;
    string message = 2;
    ShippingResponseDeleteAt data = 3;
}


message ApiResponsesShipping {
    string status = 1;
    string message = 2;
    repeated ShippingResponse data = 3;
}


message ApiResponseShippingDelete {
    string status = 1;
    string message = 2;
}

message ApiResponseShippingAll {
    string status = 1;
    string message = 2;
}
  

message ApiResponsePaginationShipping {
    string status = 1;
    string message = 2;
    repeated ShippingResponse data = 3;
    PaginationMeta pagination = 4;
}


message ApiResponsePaginationShippingDeleteAt {
    string status = 1;
    string message = 2;
    repeated ShippingResponseDeleteAt data = 3;
    PaginationMeta pagination = 4;
}


service ShippingService {
    rpc FindAll(FindAllShippingRequest) returns (ApiResponsePaginationShipping);
    rpc FindById(FindByIdShippingRequest) returns (ApiResponseShipping);
    rpc FindByOrder(FindByIdShippingRequest) returns(ApiResponseShipping);
    rpc FindByActive(FindAllShippingRequest) returns(ApiResponsePaginationShippingDeleteAt);
    rpc FindByTrashed(FindAllShippingRequest) returns (ApiResponsePaginationShippingDeleteAt);
  
    rpc TrashedShipping(FindByIdShippingRequest) returns (ApiResponseShippingDeleteAt);
    rpc RestoreShipping(FindByIdShippingRequest) returns (ApiResponseShippingDeleteAt);
    rpc DeleteShippingPermanent(FindByIdShippingRequest) returns (ApiResponseShippingDelete);

    rpc RestoreAllShipping(google.protobuf.Empty) returns (ApiResponseShippingAll);
    rpc DeleteAllShippingPermanent(google.protobuf.Empty) returns (ApiResponseShippingAll);
}
